--- a/README.org
+++ b/README.org
@@ -47,6 +47,9 @@ Twist can discover and build packages from the following sources:
 
 To add custom packages to your configuration, you only have to define MELPA recipes and commit them to your repository.
 It can already build configurations with a few hundreds of packages from various registries (see [[https://github.com/emacs-twist/examples][examples]]).
+** Configuration Examples
+- [[https://github.com/akirak/emacs-config][akirak/emacs-config]]
+- [[https://github.com/terlar/emacs-config][terlar/emacs-config]]
 ** Credits
 Twist is a Nix re-implementation of [[https://github.com/melpa/package-build][package-build]] and replicates its build logic.
 It is also heavily influenced by the Emacs wrapper in [[https://github.com/NixOS/nixpkgs/][nixpkgs]], though twist was written from scratch and different in implementation.
